--- a/views/index.pug
+++ b/views/index.pug
@@ -5,7 +5,7 @@ html
     script(src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.10/lodash.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/tweenjs/1.0.2/tweenjs.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js")
-    script(src="js/app.js")
+    
   body
     h1 WS2812-Simulator
     hr
@@ -19,4 +19,7 @@ html
           each col in [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
             div(class="pixel")
               p #{row*26+col+13}
+    audio(class="drum-kit")
+      source(src="")
+    script(src="js/app.js")
     
