--- a/views/index.pug
+++ b/views/index.pug
@@ -21,5 +21,7 @@ html
               p #{row*26+col+13}
     audio(class="drum-kit")
       source(src="")
+    audio(class="bgm")
+      source(src="http://www.momh.org/album/album_audio/album7/07_song.mp3")
     script(src="js/app.js")
     
