browser based js modules!!!

--- a/views/index.pug
+++ b/views/index.pug
@@ -23,5 +23,5 @@ html
       source(src="")
     audio(class="bgm")
       source(src="http://www.momh.org/album/album_audio/album7/07_song.mp3")
-    script(src="js/app.js")
+    script(type="module", src="js/app.js")
     
