--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,7 @@ html
   head
     link(rel="stylesheet", type="text/css", href="css/style.css")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.min.js")
-    script(src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.10/lodash.min.js")
+    //- script(src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.10/lodash.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/tweenjs/1.0.2/tweenjs.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js")
     
